Added wall entry service
